SERVER-50303 Initialize tenant cloner batch size in contructor