src/mongo/db/repl/collection_cloner_test.cpp
@@ -35,6 +35,7 @@
 #include "mongo/bson/bsonmisc.h"
 #include "mongo/db/repl/cloner_test_fixture.h"
 #include "mongo/db/repl/collection_cloner.h"
+#include "mongo/db/repl/repl_server_parameters_gen.h"
 #include "mongo/db/repl/storage_interface.h"
 #include "mongo/db/repl/storage_interface_mock.h"
 #include "mongo/db/service_context_test_fixture.h"
@@ -335,6 +336,36 @@ TEST_F(CollectionClonerTestResumable, InsertDocumentsSingleBatch) {
 
     auto stats = cloner->getStats();
     ASSERT_EQUALS(1u, stats.receivedBatches);
+}
+
+TEST_F(CollectionClonerTestResumable, BatchSizeStoredInConstructor) {
+    auto batchSizeDefault = collectionClonerBatchSize;
+    collectionClonerBatchSize = 3;
+    ON_BLOCK_EXIT([&]() { collectionClonerBatchSize = batchSizeDefault; });
+
+    // Set up data for preliminary stages.
+    _mockServer->setCommandReply("count", createCountResponse(2));
+    _mockServer->setCommandReply("listIndexes",
+                                 createCursorResponse(_nss.ns(), BSON_ARRAY(_idIndexSpec)));
+
+    // Set up documents to be returned from upstream node. It should take 3 batches to clone the
+    // documents.
+    _mockServer->insert(_nss.ns(), BSON("_id" << 1));
+    _mockServer->insert(_nss.ns(), BSON("_id" << 2));
+    _mockServer->insert(_nss.ns(), BSON("_id" << 3));
+    _mockServer->insert(_nss.ns(), BSON("_id" << 4));
+    _mockServer->insert(_nss.ns(), BSON("_id" << 5));
+    _mockServer->insert(_nss.ns(), BSON("_id" << 6));
+    _mockServer->insert(_nss.ns(), BSON("_id" << 7));
+
+    auto cloner = makeCollectionCloner();
+    ASSERT_OK(cloner->run());
+
+    ASSERT_EQUALS(7, _collectionStats->insertCount);
+    ASSERT_TRUE(_collectionStats->commitCalled);
+
+    auto stats = cloner->getStats();
+    ASSERT_EQUALS(3u, stats.receivedBatches);
 }
 
 TEST_F(CollectionClonerTestResumable, InsertDocumentsMultipleBatches) {
